# ProjectPokemonAI

./: .gitignore
src/: CMakeLists.txt  DataBucket.hpp  Multiprocess_BattleCrawler.cpp  Multiprocess_BattleCrawler.hpp  Multiprocess_UrlServlet.cpp  Multiprocess_UrlServlet.hpp  ProcessPool_BattleServlet.cpp  ProcessPool_BattleServlet.hpp  ProcessPool_PythonCrawler.cpp  ProcessPool_PythonCrawler.hpp  ProcessPool_UrlServlet.cpp  ProcessPool_UrlServlet.hpp  TODO.txt  TestCrawler.py  UrlAllocator.hpp  UrlServer.cpp  UrlServer.cpp.bak  UrlServlet.cpp  UrlServlet.hpp  UrlServlet2.cpp  UrlServlet2.hpp  UserCrawler.py
src/Core/: Logger.cpp  Logger.hpp  Multiprocess.cpp  Multiprocess.hpp  ProcessPool.cpp  ProcessPool.hpp
